crates/bitnet-tokenizers/tests/snapshots/snapshot_wave32__special_tokens_default_debug.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_wave32.rs
expression: tokens
---
SpecialTokens {
    unk_id: None,
    bos_id: None,
    eos_id: None,
    pad_id: None,
    all_ids: {},
}
