crates/bitnet-tokenizers/tests/snapshots/snapshot_wave32__tokenizer_config_default_debug.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_wave32.rs
expression: cfg
---
TokenizerConfig {
    model_type: "",
    vocab_size: 0,
    pre_tokenizer: None,
    add_bos: false,
    add_eos: false,
    add_space_prefix: false,
    byte_fallback: false,
    bos_token_id: None,
    eos_token_id: None,
    pad_token_id: None,
    unk_token_id: None,
    vocabulary: None,
    bpe_merges: None,
}
