crates/bitnet-tokenizers/tests/snapshots/snapshot_wave32__vocab_config_default_debug.snap
---
source: crates/bitnet-tokenizers/tests/snapshot_wave32.rs
expression: cfg
---
VocabConfig {
    unk_token: None,
    bos_token: None,
    eos_token: None,
    pad_token: None,
    additional_special_tokens: [],
}
